--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>Your team is wasting hours on repetitive, manual, boring tasks. They are a silent growth killer, it slows you down and costs you money. I design and build custom AI-powered workflows to automate these processes.</p>
                 <p><strong>Service:</strong> I'll analyse your current operations, identify the most impactful automation opportunities, and build a custom solution (typically in Python) to handle tasks like data entry, report generation, dynamic dashboards, customer support triage, market monitoring, or invoice processing.</p>
                 <p><strong>My Own Proof:</strong> I built <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, a SaaS that uses AI to automatically analse refunds from delivery apps and recover over £1,300 ($1,760) a monnth for restaurant clients Like Going Greek and Que Ricos Fresh Mexican Kitchen.</p>
-                <p><strong>Result:</strong> Thousands of pounds saved in labour costs and hundreds of hours returned to your team to focus on high-value work.</p>
+                <p><strong>Result:</strong> Thousands of pounds/dollars saved in labour costs and hundreds of hours returned to your team to focus on high-value work.</p>
             </div>
 
             <div class="service-item">
@@ -49,7 +49,7 @@
                 <p>You have product-market fit and funding, but your operations are under the pressure of growth. You need scalable systems, yesterday. Having managed deals and <strong>negotiated term sheets</strong> from the VC side, I help leadership navigate this phase with an investor's perspective.</p>
                 <p><strong>Service:</strong> I act as an interim Head of Growth, Ops, or Revenue Operations. I come in to build the dashboards, define the KPIs, and implement the processes you need to scale from 10 to 100 people without everything catching fire.</p>
                 <p><strong>Past Experience:</strong> I was on the ground during Deliveroo's 600%+ hyper-growth phase, scaling the UK's rider fleet. At Reef Technology, I helped scale the UK kitchen network from 2 to over 100 sites, launching global brands like Wendy's and MrBeast Burgers.</p>
-                <p><strong>Result:</strong> You get a more resilient, efficient organisation that grows faster and negotiates from a positionf of strenght with partners and investors.</p>                
+                <p><strong>Result:</strong> You get a more resilient, efficient organisation that grows faster and negotiates from a position of strenght with partners and investors.</p>                
             </div>
         </section>
 
@@ -58,7 +58,7 @@
 
             <div class="experience-item">
                 <h3>Reef Technology</h3>
-                <p>As a founding team member of the UK business, I was instrumental in scaling the network from <strong>2 to 100+ locations in 20 months</strong>, supporting <strong>920% YoY revenue growth</strong>. I launched major brands like Wendy's and MrBeast Burger and negotiated commercial and legal terms with national chains.</p>
+                <p>As a founding team member of the UK business, I was instrumental in scaling the network from <strong>2 to 100+ locations in 20 months</strong>, supporting <strong>920% YoY revenue growth</strong>. I launched major brands like Wendy's and MrBeast Burger in the UK and negotiated commercial and legal terms with national chains.</p>
             </div>
 
             <div class="experience-item">
@@ -86,21 +86,18 @@
 
         <section id="about-me">
             <h2>About Me</h2>
-            <p>I am a founder and a builder. I created <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, an AI-powered tool that automatically recovers incorrect refunds for restaurants, saving them over £1,300 ($1,760) a month.</p>
-            <p>When I'm not working, you can usually find me on a tennis court competing in local tournaments.</p>
-            <p>My career has been an ongoing obsession with one question: what makes a company built to last actually work? I started at **Deliveroo**, learning how to build and scale operations from the ground up during a period of explosive growth.</p>
-            <p>I then moved into Venture Capital at **SFC Capital**, where I analsed hundreds of business models a year. I saw firsthand why most startups fail and what the winners do differently. I learned to spot operational weaknesses and opportunities from an investor's perspective.</p>
-            <p>At **Reef Technology**, I combined those skills, taking on a senior commercial role where I negotiated deals with major brands (like Island Poké, Coco di Mama, GBK, MrBeast Burgers, Wendy's and many more), modeled expansion plans for multi-million dollar investments, and managed the operational performance of our delivery kitchen network.</p>
+            <p>My career has been an ongoing obsession with one question: what makes a company built to last actually work? I started at <b>Deliveroo</b>, learning how to build and scale operations from the ground up during a period of explosive growth.</p>
+            <p>I then moved into Venture Capital at <b>SFC Capital</b>, where I analsed hundreds of business models a year. I saw firsthand why most startups fail and what the winners do differently. I learned to spot operational weaknesses and opportunities from an investor's perspective.</p>
+            <p>At <b>Reef Technology</b>, I combined those skills, taking on a senior commercial role where I negotiated deals with major brands (like Island Poké, Coco di Mama, GBK, MrBeast Burgers, Wendy's and many more), modeled expansion plans for multi-million dollar investments, and managed the operational performance of our delivery kitchen network.</p>
             <p>Today, I run my own profitable B2B SaaS app, <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, and use my experience to help other businesses grow.</p>
         </section>
 
         <section id="contact">
-            <h2>Have a problem I might be able to solve? Get in touch!</h2>
-            <p>Send me a brief note about the challenge you're facing.</p>
+            <h2>Have a problem I might be able to solve?</h2>
             <div class="contact-form-container">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKXrmdEjksbbyMo7QFB0DWMfmce5fFbvsRc_h-UuRkeN5Sxw/viewform?embedded=true" width="100%" height="689" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
-            <p><b>P.S.</b>I play tennis. If you are really good, consider teaching me how to serve faster. If you are so-so, let's play a competitive game, my current level is intermediate/upper intermediate (UK's ITF 31.1/US' UTR 4.6). If you are thinking about starting out, in 2 hours I can teach you the forehand and backhand basics..</p>
+            <p><b>P.S.</b>I play tennis. If you do too, let's play a match!</p>
 
         </section>
     </main>
