--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 I've been on the ground floor of scaling businesses. I helped manage growth at Deliveroo during its 600% revenue growth, as Uber announced Uber Eats, and was a founding team member of Reef Technology UK, scaling its delivery-only kitchen network from <strong>2 to over 100 locations in 20 months</strong> as revenues grew <strong>920% YoY</strong>. I've also evaluated hundreds of business models as an early-stage, sector agnostic, VC.
             </p>
             <p>
-                Now, I use that experience to help businesses fix operational leaks and build efficient growth flywheels. I do this through consulting and by building profitable B2B SaaS software like <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a>.
+                Now, I use that experience to help businesses fix operational leaks and build systems that create predictable growth. I do this through consulting and by building profitable B2B SaaS software like <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a>.
             </p>
         </section>
 
@@ -97,7 +97,7 @@
             <div class="contact-form-container">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKXrmdEjksbbyMo7QFB0DWMfmce5fFbvsRc_h-UuRkeN5Sxw/viewform?embedded=true" width="100%" height="689" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
-            <p><b>P.S.</b> I play tennis. If you do too, let's play a match!</p>
+            <p><b>P.S.</b> If you play tennis, contact me anyway, let's play a match!</p>
 
         </section>
         <section id="portfolio">
@@ -112,13 +112,13 @@
             
             <div class="project">
                 <h3>Interactive Restaurant Operations Dashboard</h3>
-                <p>Flask/Plotly tool analyzing delivery app performance. Reduced reporting time by 10+ hours/month.</p>
+                <p>Flask/Plotly tool analysing delivery app performance. Reduced reporting time by 10+ hours/month.</p>
                 <a href="https://youtu.be/_IfNBvZU5DE" target="_blank">View Demo</a>
             </div>
             <div class="project">
                 <h3>AI-Powered Refund Dispute Automation</h3>
         <p>
-            LLM-driven system analyzing delivery platform emails (Uber Eats, Deliveroo) to identify and automatically dispute unfair refunds. Recovered $1,700+/month for clients by leveraging transaction data.
+            LLM-driven system analysing delivery platform emails (Uber Eats, Deliveroo) to identify and automatically dispute unfair refunds. Recovered $1,700+/month for clients by leveraging transaction data.
         </p>            <a href="https://youtu.be/Kn3h-1XERrQ" target="_blank">View Demo</a>
             </div>
     
