--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="project">
                 <h3>AI-Powered Refund Dispute Automation</h3>
         <p>
-            LLM-driven system analysing delivery platform emails (Uber Eats, Deliveroo) to identify and automatically dispute unfair refunds. Recovered $1,700+/month for clients by leveraging transaction data.
+            LLM-driven system analysing delivery platform emails (Uber Eats, Deliveroo) to identify and automatically dispute unfair refunds. Recovered £1,300 ($1,700) per month for clients by leveraging transaction data.
         </p>            <a href="https://youtu.be/Kn3h-1XERrQ" target="_blank">View Demo</a>
             </div>
     
