--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                 <p>Flask/Plotly tool analysing delivery app performance. Reduced reporting time by 10+ hours/month.</p>
                 <a href="https://youtu.be/_IfNBvZU5DE" target="_blank">View Demo</a>
             </div>
-            <div class="project">
+            <!-- <div class="project">
                 <h3>AI-Powered Refund Dispute Automation</h3>
         <p>
             LLM-driven system analysing delivery platform emails (Uber Eats, Deliveroo) to identify and automatically dispute unfair refunds. Recovered £1,300 ($1,700) per month for clients by leveraging transaction data.
         </p>            <a href="https://youtu.be/Kn3h-1XERrQ" target="_blank">View Demo</a>
-            </div>
+            </div> -->
     
     
             <div class="project">
