--- a/index.html
+++ b/index.html
@@ -107,8 +107,13 @@
             <div class="project">
                 <h3>DeliveryByte (B2B SaaS)</h3>
                 <p>AI-powered refund automation tool for restaurants. Built with Django/Heroku, saving clients £1,300 ($1,700) per month via LLM-driven workflows.</p>
-                <img src="images/deliverybyte.png" alt="A screenshot of the DeliveryByte landing page." class="project-screenshot">
-                <a href="https://deliverybyte.com" target="_blank">Visit Live Site</a>
+                <!--<img src="images/deliverybyte.png" alt="A screenshot of the DeliveryByte landing page." class="project-screenshot">
+                <a href="https://deliverybyte.com" target="_blank">Visit Live Site</a> -->
+
+                <a href="https://deliverybyte.com" target="_blank">
+                    <img src="images/deliverybyte.png" alt="A screenshot of the DeliveryByte landing page." class="project-screenshot">
+                    <span>Visit Live Site</span>
+                </a>
             </div>
             
             <div class="project">
