--- a/index.html
+++ b/index.html
@@ -118,10 +118,14 @@
             
             <div class="project">
                 <h3>Interactive Restaurant Operations Dashboard</h3>
-                <p>Flask/Plotly tool analysing delivery app performance. Reduced reporting time by 10+ hours/month.</p>
-                <img src="images/deliverybytedashboard.png" alt="A screenshot of the DeliveryByte dashboard showing recovered revenue for a restaurant." class="project-screenshot">
 
-                <a href="https://youtu.be/_IfNBvZU5DE" target="_blank">View Demo</a>
+                <p>Flask/Plotly tool analysing delivery app performance. Reduced reporting time by 10+ hours/month.</p>
+
+                <a href="https://youtu.be/_IfNBvZU5DE" target="_blank">
+                    <img src="images/deliverybytedashboard.png" alt="A screenshot of the DeliveryByte dashboard showing recovered revenue for a restaurant." class="project-screenshot">
+
+                <span href="https://youtu.be/_IfNBvZU5DE" target="_blank">View Demo</span>
+            
             </div>
             <!-- <div class="project">
                 <h3>AI-Powered Refund Dispute Automation</h3>
