--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                 <a href="https://youtu.be/_IfNBvZU5DE" target="_blank">
                     <img src="images/deliverybytedashboard.png" alt="A screenshot of the DeliveryByte dashboard showing recovered revenue for a restaurant." class="project-screenshot">
 
-                <span href="https://youtu.be/_IfNBvZU5DE" target="_blank">View Demo</span>
+                    <span>View Demo</span>
+                </a>    
             
             </div>
             <!-- <div class="project">
