--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Carmelo Spanò helps businesses fix operational leaks and build efficient engines for growth through consulting and custom AI automation.">
+    <meta name="description" content="Partner with Carmelo Spanò to fix operational leaks and build growth engines with expert consulting and custom AI automation. Scale your business effectively.">
     <title>Carmelo Spanó | Operations & Growth Consulting</title>
     <link rel="stylesheet" href="style.css">
 
@@ -39,7 +39,7 @@
                 <h3>(I.) For Food Delivery & Last-Mile Logistics Operators</h3>
                 <p>You're operating on thin margins in a large, competitive market. Every percentage point matters. I help you optimise your delivery channel performance. I help multi-location restaurants, QSRs, and last-mile logistics firms protect their profit and expand to new markets.</p>
                 <p><strong>Service:</strong> In-app promotional and ads strategy, menu and store-front optimisation, revenue and customer performance analysis, and troubleshooting operational leaks. I also review and help renegotiate your commercial partnership terms with delivery apps and partners to improve your margins.</p>
-                <p><strong>Past Example:</strong> At Wingstop, we identified that one of the best-selling item was misaligned with their core branding, leading to a simple but powerful shift in operational focus which lead to a decrease in delivery service fees.
+                <p><strong>Past Example:</strong> At Wingstop, we identified that one of the best-selling item was misaligned with their core branding, leading to a simple but powerful shift in operational focus which lead to a decrease in delivery service fees.</p>
                 <p><strong>The result:</strong> A clear, data-driven plan to increase profitability and secure more favourable commercial agreements.</p>
             </div>
 
@@ -47,7 +47,7 @@
                 <h3>(II.) For SMEs (£2M-£20M/$2M-$20M Revenue) with Manual Processes</h3>
                 <p>Your team is wasting hours on repetitive, manual, boring tasks. They are a silent growth killer, it slows you down and costs you money. I design and build custom AI-powered workflows to automate these processes.</p>
                 <p><strong>Service:</strong> I'll analyse your current operations, identify the most impactful automation opportunities, and build a custom solution (typically in Python) to handle tasks like data entry, report generation, dynamic dashboards, customer support triage, market monitoring, or invoice processing.</p>
-                <p><strong>My Own Proof:</strong> I built <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, a SaaS that uses AI to automatically analse refunds from delivery apps and recover over £1,300 ($1,760) a monnth for restaurant clients Like Going Greek and Que Ricos Fresh Mexican Kitchen.</p>
+                <p><strong>My Own Proof:</strong> I built <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, a SaaS that uses AI to automatically analse refunds from delivery apps and recover over £1,300 ($1,760) a month for restaurant clients Like Going Greek and Que Ricos Fresh Mexican Kitchen.</p>
                 <p><strong>Result:</strong> Thousands of pounds/dollars saved in labour costs and hundreds of hours returned to your team to focus on high-value work.</p>
             </div>
 
@@ -94,7 +94,7 @@
         <section id="about-me">
             <h2>About Me</h2>
             <p>My career has been an ongoing obsession with one question: what makes a company built to last actually work? I started at <b>Deliveroo</b>, learning how to build and scale operations from the ground up during a period of explosive growth.</p>
-            <p>I then moved into Venture Capital at <b>SFC Capital</b>, where I analsed hundreds of business models a year. I saw firsthand why most startups fail and what the winners do differently. I learned to spot operational weaknesses and opportunities from an investor's perspective.</p>
+            <p>I then moved into Venture Capital at <b>SFC Capital</b>, where I analysed hundreds of business models a year. I saw firsthand why most startups fail and what the winners do differently. I learned to spot operational weaknesses and opportunities from an investor's perspective.</p>
             <p>At <b>Reef Technology</b>, I combined those skills, taking on a senior commercial role where I negotiated deals with major brands (like Island Poké, Coco di Mama, GBK, MrBeast Burgers, Wendy's and many more), modeled expansion plans for multi-million dollar investments, and managed the operational performance of our delivery kitchen network.</p>
             <p>Today, I run my own profitable B2B SaaS app, <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, and use my experience to help other businesses grow.</p>
         </section>
@@ -157,7 +157,6 @@
         <p></p>
         <p></p>
         <p>&copy; 2025 Carmelo Spanó. All rights reserved.</p>
-    </footer>
-    
+    </footer>    
 </body>
 </html>
