--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h3>(II.) For SMEs (£2M-£20M/$2M-$20M Revenue) with Manual Processes</h3>
                 <p>Your team is wasting hours on repetitive, manual, boring tasks. They are a silent growth killer, it slows you down and costs you money. I design and build custom AI-powered workflows to automate these processes.</p>
                 <p><strong>Service:</strong> I'll analyse your current operations, identify the most impactful automation opportunities, and build a custom solution (typically in Python) to handle tasks like data entry, report generation, dynamic dashboards, customer support triage, market monitoring, or invoice processing.</p>
-                <p><strong>My Own Proof:</strong> I built <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, a SaaS that uses AI to automatically analse refunds from delivery apps and recover over £1,300 ($1,760) a month for restaurant clients Like Going Greek and Que Ricos Fresh Mexican Kitchen.</p>
+                <p><strong>My Own Proof:</strong> I built <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, a SaaS that uses AI to automatically analse refunds from delivery apps and recover over £1,300 ($1,760) a month for restaurant clients like Going Greek and Que Ricos Fresh Mexican Kitchen.</p>
                 <p><strong>Result:</strong> Thousands of pounds/dollars saved in labour costs and hundreds of hours returned to your team to focus on high-value work.</p>
             </div>
 
