--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3>(I.) For Food Delivery & Last-Mile Logistics Operators</h3>
                 <p>You're operating on thin margins in a large, competitive market. Every percentage point matters. I help you optimise your delivery channel performance. I help multi-location restaurants, QSRs, and last-mile logistics firms protect their profit and expand to new markets.</p>
                 <p><strong>Service:</strong> In-app promotional and ads strategy, menu and store-front optimisation, revenue and customer performance analysis, and troubleshooting operational leaks. I also review and help renegotiate your commercial partnership terms with delivery apps and partners to improve your margins.</p>
-                <p><strong>Past Example:</strong> At Wingstop, we identified that one of the best-selling item was misaligned with their core branding, leading to a simple but powerful shift in operational focus which lead to a decrease in delivery service fees.</p>
+                <p><strong>Past Example:</strong> At Wingstop, we identified that one of the best-selling item was misaligned with their core branding, leading to a simple but powerful shift in operational focus which led to a decrease in delivery service fees.</p>
                 <p><strong>The result:</strong> A clear, data-driven plan to increase profitability and secure more favourable commercial agreements.</p>
             </div>
 
@@ -56,7 +56,7 @@
                 <p>You have product-market fit and funding, but your operations are under the pressure of growth. You need scalable systems, yesterday. Having managed deals and <strong>negotiated term sheets</strong> from the VC side, I help leadership navigate this phase with an investor's perspective.</p>
                 <p><strong>Service:</strong> I act as an interim Head of Growth, Ops, or Revenue Operations. I come in to build the dashboards, define the KPIs, and implement the processes you need to scale from 10 to 100 people without everything catching fire.</p>
                 <p><strong>Past Experience:</strong> I was on the ground during Deliveroo's 600%+ hyper-growth phase, scaling the UK's rider fleet. At Reef Technology, I helped scale the UK kitchen network from 2 to over 100 sites, launching global brands like Wendy's and MrBeast Burgers.</p>
-                <p><strong>Result:</strong> You get a more resilient, efficient organisation that grows faster and negotiates from a position of strenght with partners and investors.</p>                
+                <p><strong>Result:</strong> You get a more resilient, efficient organisation that grows faster and negotiates from a position of strength with partners and investors.</p>                
             </div>
         </section>
 
@@ -95,7 +95,7 @@
             <h2>About Me</h2>
             <p>My career has been an ongoing obsession with one question: what makes a company built to last actually work? I started at <b>Deliveroo</b>, learning how to build and scale operations from the ground up during a period of explosive growth.</p>
             <p>I then moved into Venture Capital at <b>SFC Capital</b>, where I analysed hundreds of business models a year. I saw firsthand why most startups fail and what the winners do differently. I learned to spot operational weaknesses and opportunities from an investor's perspective.</p>
-            <p>At <b>Reef Technology</b>, I combined those skills, taking on a senior commercial role where I negotiated deals with major brands (like Island Poké, Coco di Mama, GBK, MrBeast Burgers, Wendy's and many more), modeled expansion plans for multi-million dollar investments, and managed the operational performance of our delivery kitchen network.</p>
+            <p>At <b>Reef Technology</b>, I combined those skills, taking on a senior commercial role where I negotiated deals with major brands (like Island Poké, Coco di Mama, GBK, MrBeast Burgers, Wendy's and many more), modelled expansion plans for multi-million dollar investments, and managed the operational performance of our delivery kitchen network.</p>
             <p>Today, I run my own profitable B2B SaaS app, <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, and use my experience to help other businesses grow.</p>
         </section>
 
