--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 <body>
 
     <header>
-        <h1>Carmelo Spanó</h1>
-        <h2>I build profitable systems for ambitious companies.</h2>
+        <img src="images/carmelo-spano-headshot.png" alt="Headshot of Carmelo Spanó" class="profile-photo">
+        <div class="header-text">
+            <h1>Carmelo Spanó</h1>
+            <h2>I build profitable systems for ambitious companies.</h2>
+        </div>
     </header>
 
     <main>
