updated profile pic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <header>
-        <img src="images/carmelo-spano-headshot.png" alt="Headshot of Carmelo Spanó" class="profile-photo">
+        <img src="images/carmelo-spano-headshot.jpg" alt="Headshot of Carmelo Spanó" class="profile-photo">
         <div class="header-text">
             <h1>Carmelo Spanó</h1>
             <h2>I build profitable systems for ambitious companies.</h2>
