Added linkedin redirect

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h4>Selected Led/Contributed VC Deals:</h4>
                     <ul>
                         <li><strong>Mayku (£1M/$1.4M):</strong> Led round alongside Robin Klein (LocalGlobe) for a company creating desktop vacuum forming machines for designers and creators.</li>
-                        <li><strong>Ember (£250K/$339K):</strong> Led the first round for a fintech startup automating accounting and tax for small business owners.</li>
+                        <li><strong>Ember (£250K/$339K):</strong> Led the first round for a fintech startup automating accounting and tax for small business owners. Starling Bank has acquired Ember.</li>
                         <li><strong>Swytch (£800K/$1.1M):</strong> Led round for the creators of the world's smallest and lightest electric bike conversion kit.</li>
                         <li><strong>Axiom (YC-backed):</strong> Participated in the Seed round for a YC-backed startup that lets anyone automate web tasks without code.</li>
                         <li><strong>PPC Protect (£125K/$169.3K):</strong> Led the first round for a system that prevents click fraud for companies advertising on Google Ads.</li>
